--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   
   .hero {
     height: 300px;
-    background-image: url(Hewan Indonesia.jpeg);
+    background-image: url(Hewan\ Indonesia.jpeg);
     background-size: cover;
     background-position: 0 -180px;
     outline-color: salmon;
