--- a/style.css
+++ b/style.css
@@ -44,11 +44,11 @@ body {
   
   .hero {
     height: 300px;
-    background-image: url(images/Hewan\ Indonesia.jpeg);
+    background-image: url(images/Fauna\ Indonesia.jpg);
     background-size: cover;
-    background-position: 0 -180px;
-    outline-color: salmon;
+    background-position: 0 -250px;
     outline-style: solid;
+    outline-color: salmon;
     outline-width: 3px;
   }
 
